# py-investimentos

./: README.md  pyproject.toml
authentication/: admin.py
authentication/migrations/: 0001_initial.py
authentication/models/: user.py
core/: settings.py
investiment/: admin.py  apps.py
investiment/migrations/: 0001_initial.py
investiment/models/: __init__.py  dividend.py  portfolio.py  portfolio_stock.py  stock.py  stock_price.py
person/: admin.py
person/migrations/: 0001_initial.py
person/models/: __init__.py  person.py
